--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@gctools-components/eslint-config": "^1.1.3",
     "bootstrap": "^4.1.1",
     "gatsby": "next",
+    "gatsby-plugin-eslint": "^1.0.3",
+    "gatsby-plugin-i18n": "^0.4.2",
     "gatsby-plugin-mdx": "^1.0.1",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sass": "next",
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-remark": "^1.7.44",
     "node-sass": "^4.9.0",
+    "popper.js": "^1.14.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
@@ -26,12 +30,17 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "eslint src/",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "devDependencies": {
     "@mdx-js/loader": "^0.12.0",
     "@mdx-js/mdx": "^0.12.0",
+    "eslint": "^5.0.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.10.0",
     "gh-pages": "^1.2.0",
     "loader-utils": "^1.1.0",
     "prettier": "^1.12.0"
@@ -39,5 +48,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+  },
+  "eslintConfig": {
+    "extends": "@gctools-components",
+    "root": true
   }
 }
