--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
-  "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@gctools-components/eslint-config": "^1.1.3",
     "bootstrap": "^4.1.1",
     "gatsby": "next",
     "gatsby-plugin-eslint": "^1.0.3",
     "gatsby-plugin-i18n": "^0.4.2",
-    "gatsby-plugin-mdx": "^1.0.1",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sass": "next",
     "gatsby-source-filesystem": "^1.5.39",
@@ -22,20 +17,16 @@
     "reactstrap": "^6.1.0",
     "rehype-react": "^3.0.2"
   },
-  "keywords": [
-    "gatsby"
-  ],
+
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -H 0.0.0.0",
     "format": "prettier --write 'src/**/*.js'",
     "test": "eslint src/",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "devDependencies": {
-    "@mdx-js/loader": "^0.12.0",
-    "@mdx-js/mdx": "^0.12.0",
     "eslint": "^5.0.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.13.0",
@@ -44,10 +35,6 @@
     "gh-pages": "^1.2.0",
     "loader-utils": "^1.1.0",
     "prettier": "^1.12.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
   },
   "eslintConfig": {
     "extends": "@gctools-components",
