--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "gatsby-transformer-remark": "^1.7.44",
     "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "reactstrap": "^6.1.0",
     "rehype-react": "^3.0.2"
   },
-
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop -H 0.0.0.0",
     "format": "prettier --write 'src/**/*.js'",
     "test": "eslint src/",
+    "lint-fix": "eslint src/ --fix",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "devDependencies": {
