--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-    "extends": "airbnb",
+    "extends": "@gctools-components",
     "globals": {
      "localizer": true
     },
@@ -14,6 +14,10 @@
       "react/no-typos": 0,
       "max-len": [2, 79, 2],
       "no-underscore-dangle": 0,
+      "jsx-a11y/anchor-is-valid": [ "error", {
+        "components": [ "Link" ],
+        "specialLink": [ "to" ]
+      }],
       "comma-dangle": ["error", {
         "arrays": "always-multiline",
         "objects": "always-multiline",
