--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@gctools-components/react-i18n-translation-webpack": "^1.1.4",
     "bootstrap": "^4.1.1",
     "gatsby": "next",
+    "gatsby-image": "next",
     "gatsby-plugin-eslint": "^1.0.3",
     "gatsby-plugin-i18n": "^0.4.2",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sass": "next",
-    "gatsby-source-filesystem": "^1.5.39",
+    "gatsby-plugin-sharp": "next",
+    "gatsby-source-filesystem": "next",
     "gatsby-transformer-remark": "^1.7.44",
+    "gatsby-transformer-sharp": "next",
     "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
     "prop-types": "^15.6.2",
