--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sass": "next",
     "gatsby-plugin-sharp": "next",
+    "gatsby-remark-copy-linked-files": "next",
     "gatsby-remark-images": "next",
     "gatsby-source-filesystem": "next",
-    "gatsby-transformer-remark": "2.1.1-beta.5",
+    "gatsby-transformer-remark": "next",
     "gatsby-transformer-sharp": "next",
     "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
