added cache cleanup before deploy

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "format": "prettier --write 'src/**/*.js'",
     "test": "eslint src/",
     "lint-fix": "eslint src/ --fix",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "rm -rf .cache/* && gatsby build --prefix-paths && gh-pages -d public"
   },
   "devDependencies": {
     "eslint": "^5.0.1",
