--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gatsby": "2.0.0-beta.59",
     "gatsby-image": "next",
     "gatsby-plugin-eslint": "^1.0.3",
-    "gatsby-plugin-i18n": "^0.4.2",
+    "gatsby-plugin-lunr": "^1.0.0",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sass": "next",
     "gatsby-plugin-sharp": "next",
@@ -36,7 +36,6 @@
     "deploy": "rm -rf .cache/* && gatsby build --prefix-paths && gh-pages -d public"
   },
   "devDependencies": {
-    "babel-preset-es2017": "^6.24.1",
     "eslint": "^5.0.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.13.0",
