working i18n language toggle

--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "gatsby-source-filesystem": "next",
     "gatsby-transformer-remark": "next",
     "gatsby-transformer-sharp": "next",
+    "i18next": "^11.6.0",
+    "i18next-browser-languagedetector": "^2.2.3",
+    "i18next-xhr-backend": "^1.5.1",
     "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
+    "react-i18next": "^7.10.1",
     "reactstrap": "^6.1.0",
     "rehype-react": "^3.0.2"
   },
