Added a custom CodeBlock react component

--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "i18next-xhr-backend": "^1.5.1",
     "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
+    "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
+    "react-copy-to-clipboard": "^5.0.1",
+    "react-prism": "^4.3.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
