--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gatsby-image": "next",
     "gatsby-plugin-eslint": "^1.0.3",
     "gatsby-plugin-google-fonts": "^0.0.4",
+    "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-lunr": "^1.0.0",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sass": "next",
