--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby": "^1.9.277",
     "gatsby-link": "^1.6.46",
     "gatsby-plugin-eslint": "^1.0.3",
+    "gatsby-plugin-google-analytics": "^2.0.5",
     "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-sass": "^1.0.26",
