--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "scripts": {
     "clear": "rm -rf .cache/*",
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -H 0.0.0.0",
     "format": "prettier --write 'src/**/*.js'",
     "test": "eslint src/",
     "lint-fix": "eslint src/ --fix",
