--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "gatsby-transformer-sharp": "latest",
     "i18next": "^11.9.0",
     "lunr": "^2.3.3",
+    "plotly.js": "^1.41.3",
+    "plotly.js-dist": "^1.41.3",
     "popper.js": "^1.14.4",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
@@ -31,6 +33,7 @@
     "react-dom": "~16.4.2",
     "react-helmet": "^5.2.0",
     "react-i18next": "^7.12.0",
+    "react-plotly.js": "^2.2.0",
     "react-prism": "~4.3.2",
     "reactstrap": "^6.4.0",
     "rehype-react": "~3.0.2"
