--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "~16.4.2",
     "react-helmet": "^5.2.0",
     "react-i18next": "^7.12.0",
+    "react-native": "^0.57.3",
     "react-prism": "~4.3.2",
     "reactstrap": "^6.4.0",
     "rehype-react": "~3.0.2"
