--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "react": "~16.4.2",
+    "react-cookie": "^3.0.4",
     "react-copy-to-clipboard": "~5.0.1",
     "react-dom": "~16.4.2",
     "react-helmet": "^5.2.0",
