--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@gctools-components/eslint-config": "^1.1.3",
+    "archiver": "^3.0.0",
     "bootstrap": "^4.1.3",
     "gatsby": "^1.9.277",
     "gatsby-link": "^1.6.46",
