Remove no push option from gh-pages

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "format": "prettier --write 'src/**/*.js'",
     "test": "eslint src/",
     "lint-fix": "eslint src/ --fix",
-    "deploy": "rm -rf .cache/* && gatsby build && cp ./src/CNAME public/ && gh-pages -n -d public"
+    "deploy": "rm -rf .cache/* && gatsby build && cp ./src/CNAME public/ && gh-pages -d public"
   },
   "devDependencies": {
     "eslint": "^5.0.1",
